--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,6 +1,7 @@
 @import "./libs/valiables";
 @import "./libs/mixins";
 
+// index
 .index {
   margin: 40px 0 0;
 
@@ -206,135 +207,92 @@
       li {
         width: 100%;
         padding: 0 0 20px;
-        box-sizing: border-box;
       }
       figure {
-        position: relative;
-        margin: 0;
         width: 100%;
-        height: 72vw;
-        overflow: hidden;
-        background: #f1f1f1;
-        img {
-          position: absolute;
-          left: 50%;
-          top: 50%;
-          display: block;
-          width: 100%;
-          transform: translate(-50%, -50%) scale(1);
-          transform-origin: 50% 50%;
-          transition: transform 200ms ease-out 50ms;
-          @supports (object-fit: cover) {
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transform: scale(1);
-          }
-        }
-        &:active {
-          img {
-            transform: scale(1.05);
-          }
-        }
+        height: 68vw;
       }
-      div {
-        padding: 12px 20px 0;
-        text-align: center;
-        strong {
-          display: block;
-          font-size: .875rem;
-          color: $color-text-base;
-          font-weight: 600;
-          line-height: 1.25;
-          @include text-single-line();
-        }
-        span {
-          display: block;
-          margin: 1px 0 0;
-          font-family: $font-circular;
-          font-size: .625rem;
-          color: #999;
-          em {
-            font-style: normal;
-            &:nth-child(n+2) {
-              &:before {
-                content: ' / ';
-              }
-            }
-          }
-        }
-      }
-      a {
+    }
+  }
+  &__work {
+    box-sizing: border-box;
+    figure {
+      position: relative;
+      margin: 0;
+      overflow: hidden;
+      background: #f1f1f1;
+      img {
+        position: absolute;
+        left: 50%;
+        top: 50%;
         display: block;
-        text-decoration: none;
-        padding: 0 0 10px;
-        -webkit-tap-highlight-color: transparent;
+        width: 100%;
+        transform: translate(-50%, -50%) scale(1);
+        transform-origin: 50% 50%;
+        transition: transform 200ms ease-out 50ms;
+        @supports (object-fit: cover) {
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          transform: scale(1);
+        }
       }
-    }
-
-    @include responsive(mobile-large) {
-      > ul {
-        margin: 0 -10px;
-        li {
-          width: 50%;
-          padding: 0 10px 20px;
-        }
-        figure {
-          height: 28vw;
-        }
-        div {
-          padding: 10px 0 0;
-          text-align: left;
+      &:active {
+        img {
+          transform: scale(1.05);
         }
       }
     }
-    @include responsive(tablet) {
-      max-width: $size-container-max;
-      margin: 30px auto 0;
-      > ul {
-        figure {
-          box-sizing: border-box;
-          height: 28vw;
-          overflow: hidden;
-          transform: translateZ(0);
-          img {
-            transition: transform 300ms ease-out;
-            transform-origin: 50% 50%;
-            backface-visibility: hidden;
-          }
-          &:hover {
-            img {
-              transform: scale(1.1) translate(-45%, -45%);
-              @supports (object-fit: cover) {
-                transform: scale(1.1);
-              }
+    div {
+      padding: 12px 20px 0;
+      text-align: center;
+      strong {
+        display: block;
+        font-size: .875rem;
+        color: $color-text-base;
+        font-weight: 600;
+        line-height: 1.25;
+        @include text-single-line();
+      }
+      span {
+        display: block;
+        margin: 1px 0 0;
+        font-family: $font-circular;
+        font-size: .625rem;
+        color: #999;
+        em {
+          font-style: normal;
+          &:nth-child(n+2) {
+            &:before {
+              content: ' / ';
             }
           }
         }
       }
     }
-    @include responsive(desktop) {
-      > ul {
-        li {
-          width: 25%;
-        }
-        figure {
-          height: 15vw;
-          max-height: 200px;
-        }
-      }
+    a {
+      display: block;
+      text-decoration: none;
+      padding: 0 0 10px;
+      -webkit-tap-highlight-color: transparent;
     }
-    @include responsive(max) {
-      > ul {
-        li {
-          width: 20%;
-        }
-        figure {
-          height: 15vw;
-          max-height: 200px;
-        }
+  }
+  &__random-works {
+    margin: 0 0;
+    > ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      @include horizontal-scroll-wrap(20px, 10px);
+      li {
+        @include horizontal-scroll-item(20px, 20px);
+      }
+      figure {
+        margin: 0;
+        width: 80vw;
+        height: 60vw;
       }
     }
   }
@@ -409,15 +367,147 @@
     }
   }
 
+  &--head {}
+  &--body {
+    margin: 30px 0 0;
+  }
+
   @include responsive(mobile-large) {
     padding: 0 $size-side-padding;
+    &__works {
+      > ul {
+        margin: 0 -10px;
+        li {
+          width: 50%;
+          padding: 0 10px 20px;
+        }
+        figure {
+          height: 28vw;
+        }
+      }
+    }
+    &__work {
+      div {
+        padding: 10px 0 0;
+        text-align: left;
+      }
+    }
+    &__random-works {
+      > ul {
+        margin-left: -20px;
+        margin-right: -20px;
+        figure {
+          width: 40vw;
+          height: 28vw;
+        }
+      }
+    }
   }
   @include responsive(tablet) {
     margin-top: 50px;
     padding: 0 $size-side-padding-desktop + 20px;
+    &__works {
+      > ul {
+        figure {
+          height: 28vw;
+        }
+      }
+    }
+    &__work {
+      figure {
+        box-sizing: border-box;
+        overflow: hidden;
+        transform: translateZ(0);
+        img {
+          transition: transform 300ms ease-out;
+          transform-origin: 50% 50%;
+          backface-visibility: hidden;
+        }
+        &:hover {
+          img {
+            transform: scale(1.1) translate(-45%, -45%);
+            @supports (object-fit: cover) {
+              transform: scale(1.1);
+            }
+          }
+        }
+      }
+    }
+    &__random-works {
+      > ul {
+        margin-left: -70px;
+        margin-right: -70px;
+      }
+    }
   }
   @include responsive(desktop) {
     padding: 0 $size-side-padding-desktop;
+    &__works {
+      max-width: $size-container-max;
+      margin: 0 auto;
+      > ul {
+        li {
+          width: 25%;
+        }
+        figure {
+          height: 15vw;
+          max-height: 200px;
+        }
+      }
+    }
+    &__random-works {
+      max-width: $size-container-max;
+      margin: 0 auto 0;
+      > ul {
+        margin: 0 -10px;
+        overflow: visible;
+        white-space: normal;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0;
+        li {
+          display: block;
+          margin-left: 0;
+          width: 25%;
+          padding: 0 10px 20px;
+          &:first-child {
+            margin-left: 0;
+          }
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+        figure {
+          width: 100%;
+          height: 15vw;
+          max-height: 200px;
+        }
+      }
+    }
+    &--head {
+      margin-top: 30px;
+    }
+    &--body {
+      margin-top: 0;
+    }
+  }
+  @include responsive(max) {
+    &__works {
+      > ul {
+        figure {
+          height: 20vw;
+          max-height: 240px;
+        }
+      }
+    }
+    &__random-works {
+      > ul {
+        figure {
+          height: 20vw;
+          max-height: 240px;
+        }
+      }
+    }
   }
   @include dark-mode() {
     &__header {
@@ -454,18 +544,16 @@
         }
       }
     }
-    &__works {
-      > ul {
-        figure {
-          background: #111;
+    &__work {
+      figure {
+        background: #111;
+      }
+      div {
+        strong {
+          color: $color-dark-text-base;
         }
-        div {
-          strong {
-            color: $color-dark-text-base;
-          }
-          span {
-            color: #666;
-          }
+        span {
+          color: #666;
         }
       }
     }
@@ -491,5 +579,12 @@
         }
       }
     }
+  }
+}
+
+// intro
+.intro {
+  &__title {
+    font-size: 0;
   }
 }
