--- a/assets/scss/libs/mixins.scss
+++ b/assets/scss/libs/mixins.scss
@@ -54,3 +54,45 @@
 @mixin dark-mode() {
   @media (prefers-color-scheme: dark) { @content; }
 }
+
+// horizontal scroll for mobile
+@mixin horizontal-scroll-wrap($padding-side:16px, $padding-bottom:16px)
+{
+  display: block;
+  padding-bottom: $padding-bottom;
+  margin: 0;
+  white-space: nowrap;
+  font-size: 0;
+  line-height: 0;
+  overflow-x: auto;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
+  -webkit-scroll-snap-type: x mandatory;
+  scroll-snap-type: x mandatory;
+  -webkit-scroll-padding-left: $padding-side;
+  scroll-padding-left: $padding-side;
+}
+@mixin horizontal-scroll-item($padding-side:16px, $padding-side-outer:null)
+{
+  @if $padding-side-outer == null
+  {
+    $padding-side-outer: $padding-side;
+  }
+
+  position: relative;
+  display: inline-block;
+  margin-left: $padding-side;
+  padding: 0;
+  -webkit-scroll-snap-align: start;
+  scroll-snap-align: start;
+  vertical-align: top;
+  white-space: normal;
+  line-height: normal;
+  font-size: initial;
+  &:first-child {
+    margin-left: $padding-side-outer;
+  }
+  &:last-child {
+    margin-right: $padding-side-outer;
+  }
+}
