헤더와 목록 간격 조정

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -587,4 +587,23 @@
   &__title {
     font-size: 0;
   }
+  &__index {
+    margin-top: 0;
+  }
+
+  @include responsive(mobile-large) {
+    &__index {
+      margin-top: 20px;
+    }
+  }
+  @include responsive(tablet) {
+    &__index {
+      margin-top: 60px;
+    }
+  }
+  @include responsive(max) {
+    &__index {
+      margin-top: 70px;
+    }
+  }
 }
