날짜부분  마진 설정

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -280,6 +280,7 @@
     }
     .regdate {
       display: block;
+      margin: 2px 0 0;
       font-style: normal;
       font-size: .625rem;
       color: #999;
