좋아요 버튼 터치 스타일 수정

--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -253,6 +253,7 @@
           }
         }
       }
+      &:active,
       &:focus {
         background: rgba(#000, .05);
         svg {
@@ -359,6 +360,7 @@
         em {
           color: mix(#000, $color-dark-text-base, 50%);
         }
+        &:active,
         &:focus {
           background: rgba(#000, .15);
         }
