랜덤 아이템 부분 가로 스크롤 픽스

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -304,6 +304,7 @@
       background: rgba(#000, .05);
     }
     > ul {
+      position: relative;
       margin: 0;
       padding: 0;
       list-style: none;
