--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -1,5 +1,6 @@
 @import "./libs/valiables";
 @import "./libs/mixins";
+@import "~redgoose-content-body";
 
 .detail {
   margin: 40px 0 0;
@@ -34,171 +35,6 @@
   }
   &__body {
     margin: 20px 0 0;
-    font-size: 1rem;
-    line-height: 1.62;
-
-    & {
-      h1, h2, h3, h4, h5, h6 {
-        line-height: 1.25;
-        font-weight: 600;
-      }
-      h1, h2, h3 { margin: 2.5rem 0 1.5rem; }
-      h4, h5, h6 { margin: 1.75rem 0 1rem; }
-      h1 { font-size: 2rem; }
-      h2 { font-size: 1.75rem; }
-      h3 { font-size: 1.5rem; }
-      h4 { font-size: 1.25rem; }
-      h5 { font-size: 1rem; }
-      h6 { font-size: .9375rem; }
-      p { margin: 1rem 0; }
-      ul, ol {
-        margin: 1rem 0;
-        padding-left: 1.125rem;
-        li {
-          margin: .25rem 0;
-        }
-      }
-      img {
-        display: block;
-        position: relative;
-        left: 50%;
-        margin: 3.25rem 0 1.75rem;
-        max-width: 100vw;
-        max-height: 1240px;
-        transform: translateX(-50%);
-        transform-origin: 50% 50%;
-      }
-      h1, h2, h3 {
-        & + * > img:first-child,
-        & + img {
-          margin-top: 1rem;
-        }
-      }
-      blockquote {
-        position: relative;
-        margin: 1rem 0;
-        padding: 1rem 1rem 1rem calc(1rem + 4px);
-        background: mix(#e8e9eb, #fff, 75%);
-        &:after {
-          content: '';
-          position: absolute;
-          left: 0;
-          top: 0;
-          bottom: 0;
-          width: 4px;
-          background: #1e65d7;
-        }
-        * {
-          &:first-child {
-            margin-top: 0;
-          }
-          &:last-child {
-            margin-bottom: 0;
-          }
-        }
-      }
-      hr {
-        display: block;
-        margin: 3rem 0;
-        padding: 0 0 10px;
-        border: none;
-        &:after {
-          content: '...';
-          position: relative;
-          display: block;
-          top: -10px;
-          text-align: center;
-          font-family: Georgia, Cambria, "Times New Roman", Times, serif;
-          font-size: 20px;
-          text-indent: 10px;
-          letter-spacing: 8px;
-          font-weight: 800;
-          line-height: 1;
-          color: $color-text-base;
-        }
-      }
-      table {
-        margin: 1rem 0;
-        border-collapse: collapse;
-        th, td {
-          padding: .5rem 1rem;
-          border: 1px solid #ddd;
-        }
-        thead {
-          th, td {
-            border-bottom-width: 2px;
-          }
-        }
-      }
-      a {
-        word-break: break-all;
-      }
-      code {
-        word-break: break-word;
-        font-size: 87.5%;
-        color: #007bff;
-      }
-      pre {
-        margin: 1rem 0;
-        padding: 1rem;
-        background: mix(#e8e9eb, #fff, 75%);
-        font-size: 0;
-        line-height: 1.5;
-        overflow: auto;
-        > code {
-          margin: 0;
-          padding: 0;
-          background: none;
-          white-space: pre;
-          border-radius: 0;
-          color: #222;
-          font-size: .8125rem;
-        }
-      }
-      input[type=checkbox] {
-        margin-right: 3px;
-      }
-      iframe {
-        display: block;
-        margin: 1.5rem auto;
-        max-width: 100%;
-      }
-      .iframe {
-        margin: 1.5rem 0;
-        position: relative;
-        padding-bottom: 56.25%; /*16:9*/
-        height: 0;
-        overflow: hidden;
-        iframe {
-          position: absolute;
-          top:0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          margin: 0;
-        }
-      }
-      embed {
-        display: block;
-        max-width: 100%;
-        margin: 2rem auto 1rem;
-        background: #eee;
-      }
-    }
-    > * {
-      &:first-child {
-        margin-top: 0;
-        *:first-child {
-          margin-top: 0;
-        }
-      }
-      &:last-child {
-        margin-bottom: 0;
-        *:last-child {
-          margin-bottom: 0;
-        }
-      }
-    }
   }
   &__like {
     margin: 40px 0 0;
@@ -317,23 +153,6 @@
     }
     &__body {
       margin: 40px 0 0;
-      img {
-        max-width: 100vw;
-      }
-    }
-  }
-  @include responsive(desktop) {
-    &__body {
-      img {
-        max-width: 90vw;
-      }
-    }
-    @include retina() {
-      &__body {
-        img {
-          zoom: .75;
-        }
-      }
     }
   }
   @include dark-mode() {
@@ -343,31 +162,6 @@
       }
       h2 {
         color: #fff;
-      }
-    }
-    &__body {
-      & {
-        code {
-          color: #aa74ff;
-        }
-        pre {
-          background: mix(#000, $color-dark-bg, 25%);
-          > code {
-            color: mix(#000, $color-dark-text-base, 25%);
-          }
-        }
-        blockquote {
-          background: mix(#000, $color-dark-bg, 25%);
-          color: mix(#000, $color-dark-text-base, 25%);
-          &:after {
-            background: #8661cd;
-          }
-        }
-        hr {
-          &:after {
-            color: $color-dark-text-base;
-          }
-        }
       }
     }
     &__like {
