--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -83,12 +83,15 @@
         color: #aaa;
         transition: opacity 150ms ease-out;
       }
-      &.on,
       &:disabled {
         cursor: default;
         svg {
-          .step-1,
-          .step-2,
+          .step-1 {
+            color: #ddd;
+          }
+          .step-2 {
+            color: #bbb;
+          }
           .step-3 {
             color: #aaa;
           }
@@ -110,6 +113,14 @@
         }
         em {
           opacity: 0;
+        }
+      }
+      &:disabled {
+        &:active {
+          background: none;
+          em {
+            opacity: 1;
+          }
         }
       }
     }
@@ -168,6 +179,19 @@
       button {
         em {
           color: mix(#000, $color-dark-text-base, 50%);
+        }
+        &:disabled {
+          svg {
+            .step-1 {
+              color: #666;
+            }
+            .step-2 {
+              color: #444;
+            }
+            .step-3 {
+              color: #333;
+            }
+          }
         }
         &:active,
         &:focus {
