페이지네이트 스타일 부분 작은수정

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -608,6 +608,11 @@
             background: mix($color-dark-bg, #000, 75%);
           }
         }
+        strong {
+          &:active {
+            background: transparent;
+          }
+        }
       }
     }
 
